Test changes: -updated testing strategy, fixtures can now be accessed through fixture['name'] -each test will be a fresh fixture (which is the way it should be)
Code changes:
-updated Repository to include a parameter indicating if the repository should be new
-added ability to create mock branches and to convert YAML into branches

Other changes:
-added mock constructor guide.txt

--- a/pyvcal/tests/mock/test_fixtures.yaml
+++ b/pyvcal/tests/mock/test_fixtures.yaml
@@ -1,20 +1,35 @@
-test1:
+testrepo1:
     repository:
         path: http://www.somesvnpath.com/svn
 
-test2:    
+testrepo2:    
     repository:
         path: http://www.somesvnpath.com/svn2
         branches: 
-            branch1: None
-            branch2: None
+            - branch1
+            - branch2
 
-test3:        
+testrepo3:        
     repository:
         path: http://www.somesvnpath.com/svn3
         branches: 
-            branch1: None
-            branch2: None
+            - branch1
+            - branch2
         revisions:
             - revision1
             - revision2
+
+testbranch1:
+    branches:
+        branch1:
+            head: revision5
+
+testbranch2:
+    branches:
+        branch1:
+            head: revision5
+        branch3:
+            head: revision35
+        branch6:
+            head: revision1
+    
